--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "typescript": "~4.7.2"
   }
 }
