--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "cypress": "^11.2.0",
     "jasmine-core": "~4.3.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
