Register 96% + inicio home

--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,7 @@
             "styles": [
               "src/styles.css"
             ],
+            "codeCoverage": true,
             "scripts": []
           }
         }
